[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pawspector Valley/Scripts/HBoxContainer.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CALL.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PASS.gd" type="Script" id=4]
[ext_resource path="res://World/PathBackground.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/JinxedWizards.ttf"

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = SubResource( 2 )

[node name="LiarsDiceChoices" type="Node2D"]
position = Vector2( 120, 48 )

[node name="PlayerTurnChoices" type="VBoxContainer" parent="."]
margin_left = -112.0
margin_top = -40.0
margin_right = 65.0
margin_bottom = 104.0

[node name="InventoryContainer" type="MarginContainer" parent="PlayerTurnChoices"]
margin_right = 193.0
margin_bottom = 160.0

[node name="Panel" type="Panel" parent="PlayerTurnChoices/InventoryContainer"]
margin_right = 193.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PlayerTurnChoices/InventoryContainer"]
margin_right = 193.0
margin_bottom = 160.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="PlayerTurnChoices/InventoryContainer/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 185.0
margin_bottom = 152.0

[node name="HBoxContainer" type="VBoxContainer" parent="PlayerTurnChoices/InventoryContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 185.0
margin_bottom = 152.0
script = ExtResource( 1 )

[node name="DieNumberLabel" type="Label" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer"]
margin_right = 177.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 3 )
text = "What do you want to bet?"

[node name="DieNumber" type="OptionButton" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer"]
margin_top = 16.0
margin_right = 177.0
margin_bottom = 36.0

[node name="NumberOfDiceLabel" type="Label" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer"]
margin_top = 40.0
margin_right = 177.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "How many do you want to bet?"

[node name="NumberOfDice" type="OptionButton" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer"]
margin_top = 56.0
margin_right = 177.0
margin_bottom = 76.0

[node name="Button" type="TextureButton" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer"]
margin_top = 80.0
margin_right = 177.0
margin_bottom = 144.0
texture_normal = ExtResource( 5 )
stretch_mode = 1

[node name="OK" type="Label" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/Button"]
margin_left = 24.0
margin_top = 24.0
margin_right = 43.0
margin_bottom = 38.0
text = "OK"

[node name="BluffCallChoices" type="HBoxContainer" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 200.0
margin_bottom = 144.0

[node name="CALL" type="TextureButton" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
script = ExtResource( 2 )

[node name="CALL" type="Label" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices/CALL"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "CALL"

[node name="PASS" type="TextureButton" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
script = ExtResource( 4 )

[node name="PASS" type="Label" parent="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices/PASS"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "PASS"

[connection signal="item_selected" from="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/DieNumber" to="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer" method="_on_DieNumber_item_selected"]
[connection signal="item_selected" from="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/NumberOfDice" to="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer" method="_on_NumberOfDice_item_selected"]
[connection signal="pressed" from="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/Button" to="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer" method="_on_Button_pressed"]
[connection signal="pressed" from="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices/CALL" to="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices/CALL" method="_on_CALL_pressed"]
[connection signal="pressed" from="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices/PASS" to="PlayerTurnChoices/InventoryContainer/MarginContainer/HBoxContainer/BluffCallChoices/PASS" method="_on_PASS_pressed"]
